Código adaptado para servidor local momentaneamente

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "dotenv": "^17.2.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["discord", "bot", "dota2"],
+  "keywords": [
+    "discord",
+    "bot",
+    "dota2"
+  ],
   "author": "",
   "license": "MIT"
 }
