--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "canvas": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^17.2.3"
   },
